--- a/package.json
+++ b/package.json
@@ -1,35 +1,78 @@
 {
-  "name": "play-equation",
-  "version": "0.1.0",
-  "description": "play mathematical equations as sound",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -a localhost -p 8000"
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-mathjax": "^0.1.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsphweid/playEquation.git"
-  },
-  "author": "joseph weidinger",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jsphweid/playEquation/issues"
-  },
-  "homepage": "https://github.com/jsphweid/playEquation#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-htmlhint": "^0.9.13",
-    "grunt-string-replace": "^1.3.1",
-    "http-server": "^0.9.0"
+    "@types/react": "^15.0.11",
+    "@types/react-addons-test-utils": "^0.14.17",
+    "@types/react-dom": "^0.14.23",
+    "autoprefixer": "^6.7.3",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-istanbul": "^4.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.8",
+    "browser-sync-spa": "^1.0.3",
+    "css-loader": "^0.26.1",
+    "del": "^2.2.2",
+    "es6-shim": "^0.35.3",
+    "eslint": "^3.15.0",
+    "eslint-config-xo-react": "^0.10.0",
+    "eslint-config-xo-space": "^0.15.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.1",
+    "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-filter": "^5.0.0",
+    "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.5.3",
+    "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-webpack": "^2.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "postcss-loader": "^1.3.1",
+    "react-addons-test-utils": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-fail-plugin": "^1.0.5",
+    "webpack-hot-middleware": "^2.17.0"
+  },
+  "scripts": {
+    "build": "gulp",
+    "serve": "gulp serve",
+    "serve:dist": "gulp serve:dist",
+    "test": "gulp test",
+    "test:auto": "gulp test:auto"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "browser": true,
+      "jasmine": true
+    },
+    "extends": [
+      "xo-react/space",
+      "xo-space/esnext"
+    ],
+    "parser": "babel-eslint"
   }
 }
