--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "play mathematical equations as sound",
   "main": "main.js",
   "scripts": {
-    "build": "grunt build",
+    "build": "npm run clean && grunt build",
+    "clean": "rm -rf ./dist",
     "deploy": "npm run build && ./deploy.sh",
     "start": "hs src/ localhost -p 8000"
   },
