--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "build": "npm run clean && grunt build",
-    "clean": "rm -rf ./dist",
+    "clean": "rm -rf ./build",
     "deploy": "npm run build && ./deploy.sh",
     "start": "hs src/ localhost -p 8000"
   },
